end of the year
sent to pavel/katharina
modern german done, polish idea done

--- a/constituent-containment.tex
+++ b/constituent-containment.tex
@@ -1037,9 +1037,18 @@ The relative pronoun (the \tsc{nom}P) consists of the feature \tsc{f}1 and a con
 I illustrate this by drawing a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun and by marking the content of the dashed circles for the relative pronoun gray.
 This means that a light head can delete a relative pronoun when there is a syncretic form between the two, even though the light head lacks the feature \tsc{rel} that the relative pronoun contains.
 
-The fact that syncretism licenses deletion is not specific to the portion of the structure that corresponds to the \tsc{rel}P that contains the ϕP. Syncretism between different cases have the same effect. I illustrate this with an example from an internal-only language.
+The fact that syncretism licenses deletion is not specific to the portion of the structure that corresponds to the \tsc{rel}P that contains the ϕP. Syncretism between different cases have the same effect. I illustrate this with an example from Modern German.
 
-Suppose that there is a syncretism between the nominative and the accusative. That is, there is a lexical entry for the \tsc{acc}P which contains the feature \tsc{f}2 and the \tsc{nom}P, but not a more specific one that spells out the \tsc{nom}P on its own. In \ref{ex:nom-acc-syn}, I give the lexical entry, which spells out as /β/.
+Consider the example in \ref{ex:mg-syn}, in which the internal nominative case competes against the external accusative case. The relative clause is marked in bold.
+The internal case is nominative, as the predicate \tit{gefällen} `to please' takes nominative subjects.
+The external case is accusative, as the predicate \tit{erzählen} `to tell' takes accusative objects.
+The relative pronoun \tit{was} `\ac{rel}.\ac{inan}.\tsc{nom/acc}' is syncretic between the nominative and the accusative.
+
+\exg. Ich erzähle \tbf{was} \tbf{immer} \tbf{mir} \tbf{gefällt}.\\
+ 1\ac{sg}.\ac{nom} tell.\ac{pres}.1\ac{sg}\scsub{[acc]} \tsc{rp}.\ac{inan}.\tsc{nom/acc} ever 1\tsc{sg}.\tsc{dat} pleases.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+ `I tell whatever pleases me.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-syn}
+
+There is a syncretism between the nominative and the accusative. That is, there is a lexical entry for the \tsc{acc}P which contains the feature \tsc{f}2 and the \tsc{nom}P, but not a more specific one that spells out the \tsc{nom}P on its own. In \ref{ex:nom-acc-syn}, I give the lexical entry, which spells out as /β/.
 
 \ex.\label{ex:nom-acc-syn}
 \begin{forest} boom
