--- a/discussing-unrestricted.tex
+++ b/discussing-unrestricted.tex
@@ -1,4 +1,4 @@
-% !TEX root = thesis.tex
+x% !TEX root = thesis.tex
 
 \chapter{Discussing the unrestricted type}\label{ch:discussing-unrestricted}
 
@@ -76,7 +76,7 @@ When the internal and the external case match, the relative pronoun can delete t
 When the internal case is more complex than the external case, the relative pronoun can still delete the light head, because it still forms a constituent within the relative pronoun.
 When the external case is more complex than the internal case, the light head can delete the relative pronoun. The relative pronoun does not form a constituent within the light head, but the features that the light head lacks are contained in the lexical entry that the light head corresponds to. I suggest that this syncretism is also enough to license the deletion of the relative pronoun.
 
---make the connection to ohg--
+This is not the structure we see of Old High German.
 
 I give a compact version of the Old High German light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
 
@@ -164,43 +164,18 @@ I give a compact version of the Old High German light heads and relative pronoun
   \label{fig:rel-lh-ohg}
 \end{figure}
 
-give here the differences between ohg and mg.
-
-In what follows, I compare the light head and the relative pronoun in Figure \ref{fig:rel-lh-ohg} to the light head and the relative pronoun in Figure \ref{fig:rel-lh-unrest-syn-rep}.
-
-Consider the light head in Figure \ref{fig:rel-lh-pol}.
-Light heads in Polish are spelled out by two morphemes, which are both circled. The morpheme on the right does not only correspond to case features, but also to number feature (\tsc{ind}). The remainder of what corresponds to the ϕP is the morpheme on the left (\tsc{an}P).
-Therefore, just like the structure of the light head in Figure \ref{fig:rel-lh-matching}, the structure of the light head in Figure \ref{fig:rel-lh-pol} consists of two morphemes.
-
-Consider the relative pronoun in Figure \ref{fig:rel-lh-pol}.
-Relative pronouns in Polish contain one more morpheme than light heads: the \tsc{rel}P. As already became clear in Chapter \ref{ch:deriving-onlyinternal}, the relative pronoun contains more a single feature more than the light head, which is in Polish all contained in \tsc{rel}P. Besides that, the structure of the relative pronoun in Figure \ref{fig:rel-lh-pol} is identical to the one in Figure \ref{fig:rel-lh-matching}.
-
-Crucially, the constituency in Figure \ref{fig:rel-lh-mg} is the same as it is in Figure \ref{fig:rel-lh-intonly}. In this chapter, I take the features that are contained in the Modern German relative pronouns and light heads. I motivate that these features form the constituents shown in Figure \ref{fig:rel-lh-pol}.
+The structures in Figure \ref{fig:rel-lh-ohg} in no way resemble Figure \ref{fig:rel-lh-unrest-syn-rep}.
 
 The section is structured as follows.
+First, I discuss how Old High German differs from Modern German and Polish.
+The light-headed relative that is the source for the headless relative is an existing light-headed relative. The deletion is optional.
+Old High German can only be derived with multiple constituent containment. I wonder whether this might be a strategy that used more broadly for optional deletions of the light head. I show how Gothic is a variant of the Old High German pattern, which can also be derived with multiple constituent containment.
 
-First, I discuss the relative pronoun. According to my assumptions in Section \ref{ch:constituent-containment}, relative pronouns are part of the relative clause. I confirm this independently for Modern German with data from extraposition. I decompose the relative pronouns into the three morphemes I showed in Figure \ref{fig:rel-lh-mg}, and I show which features each of the morphemes corresponds to.
-Then I discuss the light head. I argue that Modern German headless relatives are derived from a type of light-headed relative clause that does not surface in the language. I show that the features of the light head are spread over two morphemes (the \tsc{a}P and \tsc{k}P in Figure \ref{fig:rel-lh-mg}).
+In the end, I discuss the unrestricted type that I am really talking about.
 
-Finally, I compare the constituents of the light head and the relative pronoun. I show that the relative pronoun can only delete the light head when the internal case matches the external case. When the internal and external case differ, I show that none of the elements can delete the other one.
-
-
-
-
-
-The section is structured as follows.
-Old High German differs from the other two languages I discussed in that its headless relatives have a different interpretation: they have a individuating or definite reading. This leads me to argue for slightly different functional sequences in Old High German.
-I argue that Old High German headless relatives are derived from regular light-headed relatives.
-
-
-ohg is derived from an existing light-headed relative
-and has multiple constituent deletion
-
-
-\section{The relative pronoun}
+\section{How Old High German differs}
 
 What is different here, is that the relative pronoun is a \tsc{d}-pronoun instead of a \tsc{wh}.
-
 
 Relative and demonstrative pronouns are syncretic in Old High German \pgcitep{braune2018}{338}. Table \ref{tbl:rel-dem-ohg} gives an overview of the forms in singular and plural, neuter, masculine and feminine and nominative, accusative and dative. The pronouns consist of two morphemes: a \tit{d} and suffix that differs per number, gender and case.\footnote{
 \tit{d} can also be written as \tit{dh} and \tit{th}, \tit{ë} and \tit{ē} can also be \tit{e} and \tit{é} \pgcitep{braune2018}{339}.
@@ -263,7 +238,6 @@ In this section, I only discuss two forms: the nominative and accusative masculi
 This allows me to propose the following lexical entries for the two suffixes.
 
 
-
 The \tit{d} morpheme corresponds to definiteness and anaphoricity. Anaphoricity establishes a relation with another element in the (linguistic) discourse. Definiteness encodes that the referent is specific.
 
 \ex.
@@ -278,120 +252,6 @@ The \tit{d} morpheme corresponds to definiteness and anaphoricity. Anaphoricity 
 
 So, the two relative pronouns look like this.\footnote{A question that arises here is how the case features can form a constituent to the exclusion of definiteness and anaphoricity. I come back to this issue in Chapter \ref{ch:discussion}.}
 
-\ex.
-\tiny{
-\begin{forest} boompje
-  [\tsc{rp}P, s sep=10mm
-      [\tsc{rp}P,
-      tikz={
-      \node[label=below:\tit{d},
-      draw,circle,
-      scale=0.95,
-      fit to=tree]{};
-      }
-          [\tsc{rp}]
-          [\tsc{d}P
-              [\tsc{d}, roof]
-          ]
-      ]
-      [\tsc{acc}P, s sep=20mm
-          [\tsc{med}P,
-          tikz={
-          \node[label=below:\tit{e},
-          draw,circle,
-          scale=0.85,
-          fit to=tree]{};
-          }
-              [\tsc{dx}\scsub{2}]
-              [\tsc{prox}P
-                  [\tsc{dx}\scsub{1}]
-                  [\tsc{ref}]
-              ]
-          ]
-          [\tsc{acc}P,
-          tikz={
-          \node[label=below:\tit{n},
-          draw,circle,
-          scale=0.95,
-          fit to=tree]{};
-          }
-              [\tsc{f}2]
-              [\tsc{nom}P
-                  [\tsc{f}1]
-                  [\tsc{ind}P
-                      [\tsc{ind}]
-                      [\tsc{an}P
-                          [\tsc{an}]
-                          [\tsc{cl}P
-                              [\tsc{cl}]
-                          ]
-                      ]
-                  ]
-              ]
-          ]
-      ]
-  ]
-\end{forest}
-}
-
-\ex. Old High German: \tsc{int} \tsc{nom}\\
-\tiny{
-\begin{forest} boompje
-  [\tsc{rp}P, s sep=10mm
-      [\tsc{rp}P,
-      tikz={
-      \node[label=below:\tit{d},
-      draw,circle,
-      scale=0.95,
-      fit to=tree]{};
-      }
-          [\tsc{rp}]
-          [\tsc{d}P
-              [\tsc{d}, roof]
-          ]
-      ]
-      [\tsc{nom}P, s sep=20mm
-          [\tsc{med}P,
-          tikz={
-          \node[label=below:\tit{e},
-          draw,circle,
-          scale=0.85,
-          fit to=tree]{};
-          }
-              [\tsc{dx}\scsub{2}]
-              [\tsc{prox}P
-                  [\tsc{dx}\scsub{1}]
-                  [\tsc{ref}]
-              ]
-          ]
-          [\tsc{nom}P,
-          tikz={
-          \node[label=below:\tit{r},
-          draw,circle,
-          scale=0.95,
-          fit to=tree]{};
-          }
-              [\tsc{f}1]
-              [\tsc{ind}P
-                  [\tsc{ind}]
-                  [\tsc{an}P
-                      [\tsc{an}]
-                      [\tsc{cl}P
-                          [\tsc{cl}]
-                      ]
-                  ]
-              ]
-          ]
-      ]
-  ]
-\end{forest}
-}
-
-
-
-
-
-\section{The light head}
 
 Headless relatives in which the relative pronoun starts with a \tit{d}, such as in Old High German, seem to be linked to individuating or definite readings and not to generalizing or indefinite readings \citep[cf.][]{fuss2017}. I illustrate this with the two examples I repeat from Chapter  \ref{ch:typology}.
 
@@ -425,116 +285,13 @@ not: `and he replied to whoever spoke to him'
  }
  In Old High German, there are three possible constructions: the internal and external element can both surface, only the internal element can surface and only the external element can surface. If only one of the two elements surfaces, this is the element that bears the most complex case, which is either the internal or the external one, as I have shown in Chapter \ref{ch:typology}. I assume that whether both or only one of the elements surfaces is determined by information structure. In \ref{ex:ohg-double}, the external element \tit{thér} `\tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}' is the candidate to be absent. However, it seems plausible that this is emphasized in this sentence and that it, therefore, cannot be absent.
 
-
  The light head in a light-headed relative is a demonstrative pronoun.
 
-\ex.
-\tiny{
-\begin{forest} boompje
-  [\tsc{d}P, s sep=15mm
-      [\tsc{d}P,
-      tikz={
-      \node[label=below:\tit{d},
-      draw,circle,
-      scale=0.8,
-      fit to=tree]{};
-      }
-          [\tsc{d}, roof]
-      ]
-      [\tsc{acc}P, s sep=20mm
-          [\tsc{med}P,
-          tikz={
-          \node[label=below:\tit{e},
-          draw,circle,
-          scale=0.85,
-          fit to=tree]{};
-          }
-              [\tsc{dx}\scsub{2}]
-              [\tsc{prox}P
-                  [\tsc{dx}\scsub{1}]
-                  [\tsc{ref}]
-              ]
-          ]
-          [\tsc{acc}P,
-          tikz={
-          \node[label=below:\tit{n},
-          draw,circle,
-          scale=0.95,
-          fit to=tree]{};
-          }
-              [\tsc{f}2]
-              [\tsc{nom}P
-                  [\tsc{f}1]
-                  [\tsc{ind}P
-                      [\tsc{ind}]
-                      [\tsc{an}P
-                          [\tsc{an}]
-                          [\tsc{cl}P
-                              [\tsc{cl}]
-                          ]
-                      ]
-                  ]
-              ]
-          ]
-      ]
-  ]
-\end{forest}
-}
 
-\ex. Old High German: \tsc{ext} \tsc{nom}\\
-\tiny{
-\begin{forest} boompje
-  [\tsc{d}P, s sep=15mm
-      [\tsc{d}P,
-      tikz={
-      \node[label=below:\tit{d},
-      draw,circle,
-      scale=0.8,
-      fit to=tree]{};
-      }
-          [\tsc{d}, roof]
-      ]
-      [\tsc{nom}P, s sep=20mm
-          [\tsc{med}P,
-          tikz={
-          \node[label=below:\tit{e},
-          draw,circle,
-          scale=0.85,
-          fit to=tree]{};
-          }
-              [\tsc{dx}\scsub{2}]
-              [\tsc{prox}P
-                  [\tsc{dx}\scsub{1}]
-                  [\tsc{ref}]
-              ]
-          ]
-          [\tsc{nom}P,
-          tikz={
-          \node[label=below:\tit{r},
-          draw,circle,
-          scale=0.95,
-          fit to=tree]{};
-          }
-              [\tsc{f}1]
-              [\tsc{ind}P
-                  [\tsc{ind}]
-                  [\tsc{an}P
-                      [\tsc{an}]
-                      [\tsc{cl}P
-                          [\tsc{cl}]
-                      ]
-                  ]
-              ]
-          ]
-      ]
-  ]
-\end{forest}
-}
+\section{Comparing multiple constituents}\label{sec:comparing-ohg}
 
-
-
-
-\section{Comparing constituents}\label{sec:comparing-ohg}
+Is this an alternative for optional deletion?
+I show first how it works for Old High German. Then I show a variant of it, Gothic.
 
 Consider the examples in \ref{ex:ohg-nom-nom-rep}, in which the internal nominative case competes against the external nominative case. The relative clauses are marked in bold, and the light heads and the relative pronouns are underlined. As the light head and the relative pronoun are identical it is impossible to see which of them surfaces.
 The internal case is nominative, as the predicate \tit{senten} `to send' takes nominative subjects. The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
@@ -554,11 +311,11 @@ In Figure \ref{fig:ohg-int=ext}, I give the syntactic structure of the light hea
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{c}
         \toprule
         \tsc{nom} extra light head \tit{dh-e-r}\\
         \cmidrule{1-1}
-        \tiny{
         \begin{forest} boompje
           [\tsc{d}P, s sep=20mm
               [\tsc{d}P,
@@ -620,13 +377,11 @@ In Figure \ref{fig:ohg-int=ext}, I give the syntactic structure of the light hea
               ]
           ]
         \end{forest}
-        }
       \\
       \toprule
       \tsc{nom} relative pronoun \tit{dh-e-r}
       \\
       \cmidrule{1-1}
-      \tiny{
       \begin{forest} boompje
         [\tsc{rp}P, s sep=15mm
             [\tsc{rp}P,
@@ -690,10 +445,10 @@ In Figure \ref{fig:ohg-int=ext}, I give the syntactic structure of the light hea
             ]
         ]
       \end{forest}
-      }
         \\
       \bottomrule
   \end{tabular}
+\end{adjustbox}
   \caption {Old High German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} → \tit{dher}}
   \label{fig:ohg-int=ext}
 \end{figure}
@@ -722,12 +477,12 @@ In Figure \ref{fig:ohg-int-wins}, I give the syntactic structure of the light he
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{c}
       \toprule
       \tsc{nom} extra light head \tit{th-e-r}
       \\
       \cmidrule{1-1}
-      \tiny{
       \begin{forest} boompje
         [\tsc{d}P, s sep=20mm
             [\tsc{d}P,
@@ -789,13 +544,11 @@ In Figure \ref{fig:ohg-int-wins}, I give the syntactic structure of the light he
             ]
         ]
       \end{forest}
-      }
       \\
       \toprule
       \tsc{acc} relative pronoun \tit{th-e-n}
       \\
       \cmidrule{1-1}
-      \tiny{
           \begin{forest} boompje
             [\tsc{rp}P, s sep=15mm
                 [\tsc{rp}P,
@@ -864,10 +617,10 @@ In Figure \ref{fig:ohg-int-wins}, I give the syntactic structure of the light he
               ]
           ]
         \end{forest}
-        }
         \\
       \bottomrule
   \end{tabular}
+\end{adjustbox}
  \caption {Old High German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{acc} → \tit{then}}
   \label{fig:ohg-int-wins}
 \end{figure}
@@ -896,11 +649,12 @@ In Figure \ref{fig:ohg-ext-wins}, I give the syntactic structure of the light he
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max height=0.9\textheight}
+  \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{c}
         \toprule
         \tsc{acc} extra light head \tit{dh-e-n} \\
         \cmidrule{1-1}
-        \tiny{
         \begin{forest} boompje
           [\tsc{d}P, s sep=20mm
               [\tsc{d}P,
@@ -964,13 +718,11 @@ In Figure \ref{fig:ohg-ext-wins}, I give the syntactic structure of the light he
               ]
           ]
         \end{forest}
-        }
         \\
         \toprule
         \tsc{nom} relative pronoun \tit{dh-e-r}
         \\
         \cmidrule{1-1}
-        \tiny{
             \begin{forest} boompje
               [\tsc{rp}P, s sep=15mm
                   [\tsc{rp}P,
@@ -1038,10 +790,11 @@ In Figure \ref{fig:ohg-ext-wins}, I give the syntactic structure of the light he
                   ]
               ]
           \end{forest}
-          }
           \\
       \bottomrule
   \end{tabular}
+\end{adjustbox}
+\end{adjustbox}
    \caption {Old High German \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} → \tit{dhen}}
   \label{fig:ohg-ext-wins}
 \end{figure}
@@ -1057,3 +810,23 @@ I start with the right-most constituent of the relative pronoun head that spells
 I continue with the middle constituent of the relative pronoun that spells out as \tit{e} (\tsc{med}P). This constituent is also a constituent in the light head.
 I end with the left-most constituent of the relative pronoun that spells out as \tit{d} {\tsc{rp}P}. This consituent is not contained in the light head, but it is syncretic with it. The \tsc{d}P is also spelled out as \tit{d}.
 All three constituent of the light head are also a constituent within the relative pronoun or are syncretic with them, and the relative pronoun can be absent.
+
+Gothic seems to be a variant of Old High German, in which there is also no single constituent containment. This time, the relative pronoun is not deleted by syncretism. Gothic has a separate suffix that spells out the feature \tsc{rel}. The light head deletes the relative pronoun, except for the suffix that spells out \tsc{rel}. The light head and the relative pronoun phonologically merge together, and the surface pronoun appears in the external case.
+
+\section{The hypothetical unrestricted language}
+
+It's languages that have syncretic form between the relative pronoun and the light head and syncretism. Because if you want single constituent containment, you only have a single constituent with case on top. In nano terms, you need this lexical entry:
+
+\ex. \begin{forest} boom
+  [\tsc{k}P
+      [\tsc{k}]
+      [\tsc{rel}P, edge=->
+          [\tsc{rel}]
+          [ϕP
+              [ϕ]
+          ]
+      ]
+  ]
+\end{forest}
+
+\phantom{x}
