--- a/discussion.tex
+++ b/discussion.tex
@@ -17,21 +17,12 @@ Wouldn't we now not expect that Modern German patterns with Old High German wrt 
 First there was only the relative pronoun with a D. Then we did case competition with this one, in both directions. Later, we only did it with the wh, and we only had internal left. Because this competitor was introduced, the case competition with D disappeared.
 
 
-\section{Suppletive nominatives in Gothic}
-
-
-
-
 \section{Towards deriving the always-external pattern}
 
 grosu: morphological distinctions correlate with `freedom'
 
 Why \tsc{fem} does not have \tsc{wh}-pronouns?
 
-
-\section{On clitics}
-
-I am saying things about clitics with this story. Polish clitics start at \tsc{ind}/\tsc{f1}. The fact that they have different bottoms seems to suggest that there needs to be a zero element to fill up the space. Actually, \tsc{ref} plus some gender/number might be the zero element? Although then I do not have the analysis in which in clitics some low structure is missing. Modern German does not really have clitics. Instead, it has weak pronouns that start at \tsc{class} (but lack the \tsc{ref} or the \tsc{ref} is schwa).
 
 \section{More languages}
 
@@ -51,4 +42,6 @@ like-I.part what-el you choose-you.el\\
 like-I.part what-el you choose-you.el\\
 `I like what you choose.'
 
-\phantom{x}
+\section{The missing dative/accusative}
+
+The accusative/dative example is missing from Gothic, Old High German and Ancient Greek. What if I take that seriously?
