--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -486,6 +486,8 @@ Leaving the counterexample aside, I conclude that Gothic and Old High German are
 
 \section{Only internal case allowed}\label{sec:pattern-ii}
 
+%there is variation, see vogel 2011 on exceptions. sometimes modern german seems to be like polish, sometimes like itself and sometimes like gothic. (1) in case of polish: do these headless relatives maybe have a definite interprettaion, and the light head is not r but der? then it cannot be deleted! (2) in case of modern german: it is really wen - r, (3) there is a syncretism between acc and dat (object case, brandenburg) or between nom and acc (see also was already being a syncretism), so that's why this is all allowed. the nom-dat incompatibility corroborates this hypothesis
+
 This section discusses the situation in which only the internal case is allowed to surface when it wins the case competition. When the internal case wins the case competition, the result is ungrammatical. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-only-int-repeated}.
 
 \begin{table}[ht]
