--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,hidelinks]{memoir}
 
-% \includeonly{deriving-matching}
+\includeonly{the-basic-idea}
 
 \usepackage{fenna-files/packages}
 \addbibresource{fenna-files/references.bib}
@@ -84,7 +84,7 @@ thanks
 \include{languages-without-case-competition}
 
 \part{Deriving the typology}\label{part:deriving}
-\include{constituent-containment}
+\include{the-basic-idea}
 \include{deriving-internalonly}
 \include{deriving-matching}
 \include{discussing-unrestricted}
