--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Constituent containment}\label{ch:constituent-containment}
+\chapter{The basic idea}\label{ch:the-basic-idea}
 
 In Chapter \ref{ch:typology} I introduced two descriptive parameters that generate the attested languages, as shown in Figure \ref{fig:two-parameters}.
 The first parameter concerns whether the external case is allowed to surface when it wins the case competition (allow \tsc{ext}?). This parameter distinguishes between unrestricted languages (e.g. Old High German) on the one hand and internal-only languages (e.g. Modern German) and matching languages (e.g. Polish) on the other hand.
@@ -44,7 +44,7 @@ In this chapter I show how the typology can be derived from the morphology of th
 This chapter is structured as follows.
 
 
-This chapter gives the basic idea behind my proposal. Throughout the rest of the chapter I motivate the proposal, and I illustrate it with examples.
+This chapter gives the basic idea behind my proposal. First, I introduce the the underlying assumptions that I am making. Second, I briefly go through the three options that arise as a consequence of these assumptions. Throughout the rest of the chapter I motivate the proposal, and I illustrate it with examples.
 
 \section{Underlying assumptions}
 
@@ -59,7 +59,7 @@ The light head bears the external case, and the relative pronoun bears the inter
 \ex. light head\scsub{ext} [\tsc{rp}\scsub{int} ... ]\label{ex:light+rel}
 
 In a headless relative, either the light head or the relative pronoun is absent.
-A light head or relative pronoun can be absent under the following condition: when it forms a constituent within the other element (i.e. the light head or the relative pronoun).
+For the light head to be absent, it needs to form a constituent within the other element (i.e. the light head or the relative pronoun).
 
 To see what a light-headed relative looks like, consider the light-headed relative in \ref{ex:ohg-light-headed}.
 \tit{Thér} `\tsc{lh}.\tsc{sg}.\tsc{m}.\tsc{nom}' is the light head of the relative clause. This is the element that appears in the external case, the case that reflects the grammatical role in the main clause.
@@ -74,7 +74,7 @@ The difference between a light-headed relative and a headless relative is that i
 The surfacing element is the one that bears the winning case, and the absent element is the one that bears the losing case. This means that what I have so far been glossing as and calling the relative pronoun is actually sometimes the light head and sometimes the relative pronoun. To reflect that, I call the surfacing element from now on the surface pronoun.
 
 Table \ref{tbl:options-surface-pronoun} lists the two options that I just laid out plus an additional one.
-The first option is that the relative pronoun, which bears the internal case, can appear as the surface pronoun. The second option is that the light head, which bears the external case, can appear as the surface pronoun. The third option is that there is no grammatical form for the surface pronoun.
+The first option is that the relative pronoun, which bears the internal case, appears as the surface pronoun. The second option is that the light head, which bears the external case, appears as the surface pronoun. The third option is that there is no grammatical form for the surface pronoun.
 
 \begin{table}[htbp]
   \center
@@ -96,26 +96,7 @@ The light head appears as the surface pronoun when the light head can delete the
 
 Whether or not one element can delete the other depends on the comparison between the two. Specifically, it depends on the comparison of the constituents they consist of. Light heads and relative pronouns do not only correspond to case features, but also to other features (having to do with number, gender, etc.). It differs per language how language organize these features into constituents. In this chapter, I illustrate how these different constituents within light heads and relative pronouns lead to the differences in whether or not the light head and the relative pronoun can be deleted, and therefore to different language types.
 
-In order to be able to compare the light head and the relative pronoun, I zoom in on their syntactic structures. In Chapter \ref{ch:deriving-onlyinternal} to \ref{ch:discussing-unrestricted} I give arguments to support the structures I am assuming here. Figure \ref{fig:rel-lh-intonly} gives a simplified representation of them.\footnote{
-The structure of the relative pronoun in Figure \ref{fig:rel-lh-intonly} is not a base structure but a derived one. I assume the base structure of the relative pronoun to be as in \ref{ex:base-rel}.
-
-\ex.\label{ex:base-rel}
-\begin{forest} boom
-  [\tsc{k}P
-      [\tsc{k}]
-      [\tsc{rel}P
-          [\tsc{rel}]
-          [ϕP
-              [ϕ]
-          ]
-      ]
-  ]
-\end{forest}
-
-The structure in Figure \ref{fig:rel-lh-intonly} cannot be derived from the base structure in \ref{ex:base-rel}. It is a simplification of a more complex situation for which I only give the intuition here.
-
-In Chapter \ref{ch:deriving-onlyinternal} I show the actual decomposition of the light head and the relative pronoun and how I reach the derived structure. I work with the derived structure in the main text because this is the configuration in which the containment relations under discussion hold.
-}
+In order to be able to compare the light head and the relative pronoun, I zoom in on their syntactic structures. In Chapter \ref{ch:deriving-onlyinternal} to \ref{ch:discussing-unrestricted} I give arguments to support the structures I am assuming here. Figure \ref{fig:rel-lh-intonly} gives a simplified representation of them.
 
 \begin{figure}[htbp]
   \center
@@ -126,9 +107,7 @@ In Chapter \ref{ch:deriving-onlyinternal} I show the actual decomposition of the
       \begin{forest} boom
       [\tsc{k}P,
           [\tsc{k}]
-          [ϕP
-              [ϕ, baseline]
-          ]
+          [ϕP, baseline]
       ]
       \end{forest}
       & \phantom{x} &
@@ -137,15 +116,13 @@ In Chapter \ref{ch:deriving-onlyinternal} I show the actual decomposition of the
           [\tsc{rel}]
           [\tsc{k}P
               [\tsc{k}]
-              [ϕP
-                  [ϕ, baseline]
-              ]
+              [ϕP, baseline]
           ]
       ]
     \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in the internal-only type}
+   \caption {\tsc{lh} and \tsc{rp}}
   \label{fig:rel-lh-intonly}
 \end{figure}
 
@@ -153,15 +130,21 @@ The light head and the relative pronoun partly contain the same syntactic featur
 
 This system excludes the external-only type. An external-only type would be one in which the light head can delete the relative pronoun, but the relative pronoun cannot delete the light head. In my proposal, an element can be deleted if forms a constituent within the other element. Relative pronouns always contain one more feature than light heads: \tsc{rel}. From that it follows that the light head does not contain all features that the relative pronoun contains. Therefore, it is impossible for a relative pronoun to form a constituent within the light head.
 
+Summing up this section, I make four assumptions. First, headless relative clauses are derived from light-headed relatives. Light-headed relatives contain a light head and relative pronoun. Second, in a headless relative either the light head or the relative pronoun is deleted. This happens when one of them forms a constituent within the other.
+
+
+
 I propose that the three attested different language types can be derived from this set of assumptions. The differences between them do not arise from changing the feature content of the light head and relative pronoun per language. Instead, the differences come from how the light heads and relative pronouns are spelled out.
+
+
+\section{The three patterns}
+
 
 In the next three sections, I briefly give the intuition behind how spellout generates the three attested language types.
 I take the internal-only type as the point of departure.
 The matching type differs from the internal-only type in that different constituents are formed. This is a consequence of having multiple morphemes spelling out different portions of the structure instead of having a single morpheme.
 The unrestricted type differs from the two other types in that it even different constituents are formed. In addition, it uses the same lexical entry for different portions of the structure. This is the consequence of there being a sycnretism.
 
-
-\section{The point of departure}
 
 As I mentioned, I take the internal-only type as the point of departure.
 In internal-only languages, headless relatives are grammatical when the internal and the external case match and when the internal case is more complex than the external case. Headless relatives are ungrammatical when the external case is more complex than the internal case. That means that the relative pronoun can delete the light head, but the light head cannot delete the relative pronoun. I show this in \ref{tbl:overview-rel-light-mg}.
@@ -201,9 +184,7 @@ In Figure \ref{fig:nom-nom-intonly}, I give an example in which the relative pro
         fit to=tree]{};
         }
             [\tsc{f}1]
-            [ϕP
-                [ϕ, baseline]
-            ]
+            [ϕP, baseline]
         ]
       \end{forest}
       & \phantom{x} &
@@ -218,9 +199,7 @@ In Figure \ref{fig:nom-nom-intonly}, I give an example in which the relative pro
             fit to=tree]{};
             }
                 [\tsc{f}1]
-                [ϕP
-                    [ϕ, baseline]
-                ]
+                [ϕP, baseline]
             ]
         ]
       \end{forest}\\
@@ -251,9 +230,7 @@ In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pro
         fit to=tree]{};
         }
             [\tsc{f}1]
-            [ϕP
-                [ϕ, baseline]
-            ]
+            [ϕP, baseline]
         ]
       \end{forest}
       & \phantom{x} &
@@ -270,9 +247,7 @@ In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pro
                 fit to=tree]{};
                 }
                     [\tsc{f}1]
-                    [ϕP
-                        [ϕ, baseline]
-                    ]
+                    [ϕP, baseline]
                 ]
             ]
         ]
@@ -305,9 +280,7 @@ In Figure \ref{fig:acc-nom-intonly}, I give an example in which the light head b
             fit to=tree]{};
             }
                 [\tsc{f}1]
-                [ϕP
-                    [ϕ, baseline]
-                ]
+                [ϕP, baseline]
             ]
         ]
       \end{forest}
@@ -323,9 +296,7 @@ In Figure \ref{fig:acc-nom-intonly}, I give an example in which the light head b
             fit to=tree]{};
             }
                 [\tsc{f}1]
-                [ϕP
-                    [ϕ, baseline]
-                ]
+                [ϕP, baseline]
             ]
         ]
       \end{forest}\\
